src/components/PodcasterinnenCard/PodcasterinnenCard.css
.card {
  background-color: #FFFFFF;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
  padding: 40px 20px 20px 20px;
  width: 100%;
  height: 100%;
}

.card__avatar {
  background-color: var(--theme-primary-color-dark);
  background-size: cover;
  background-position: center;
  border-radius: 50%;
  display: block;
  margin: 0 auto;
  width: 100px;
  height: 100px;
}

.card__bio {
  color: var(--theme-primary-color);
  font-size: 14px;
  font-weight: 700;
  letter-spacing: 2px;
  line-height: 1.375em;
  text-align: center;
  text-transform: uppercase;

  margin: 10px 0 40px 0;
}

.card__link {
  text-align: right;

  display: block;
  margin: 40px 0 0 0;
}

.card__list {
  margin: 0 -5px;
  padding: 0;
  overflow: hidden;
  max-height: 82px;
}

.card__list__item {
  list-style: none;
  text-overflow: ellipsis;
  white-space: nowrap;

  background-color: var(--theme-light-color);
  border-radius: 2px;
  display: inline-block;
  margin: 4px;
  padding: 3px 14px 2px 14px;
  overflow: hidden;
  max-width: 240px;
}

.card__list__item--link {
  cursor: pointer;
}

.card__subtitle {
  color: var(--theme-light-color-grey);

  margin-bottom: 0;
}

.card__text {
  padding: 20px 10px;
}

.card__title {
  text-align: center;

  margin: 5px 0 10px 0;
}

